--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -10,7 +10,7 @@
 title: Industrial Intelligence & Reliability Lab # Website name
 
 #baseURL: 'https://example.com/' # Website URL
-baseURL: 'https://XiaoY47.github.io/' # Website URL
+baseURL: 'https://imphm-lab.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
