--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -7,7 +7,8 @@
 
 
 
-title: Industrial Intelligence & Reliability Lab # Website name
+# title: Industrial Intelligence & Reliability Lab # Website name
+title: Intelligent Methods for Prognostics and Health Management Laboratory (IMPHM-Lab)
 
 #baseURL: 'https://example.com/' # Website URL
 baseURL: 'https://imphm-lab.github.io/' # Website URL
