Update hugo.yaml , modify lab name

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -8,7 +8,7 @@
 
 
 # title: Industrial Intelligence & Reliability Lab # Website name
-title: Intelligent Methods for Prognostics and Health Management Laboratory (IMPHM-Lab)
+title: Intelligent Methods for Prognostics and Health Management Laboratory (IMPHM-Lab)2
 
 #baseURL: 'https://example.com/' # Website URL
 baseURL: 'https://imphm-lab.github.io/' # Website URL
